--- a/example/example.ipynb
+++ b/example/example.ipynb
@@ -45,8 +45,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.0"
   },
   "orig_nbformat": 4
  },
