new release note `docs/release-notes/v2.0.5.md`

--- a/docs/release-notes/v2.0.5.md
+++ b/docs/release-notes/v2.0.5.md
@@ -3,71 +3,62 @@
 ## 🚀 New Features
 
 ### OpenTelemetry Integration
-- Added comprehensive OpenTelemetry support for monitoring and tracing
-- Introduced span creation and management for SendGrid operations
-- Added HTTP metrics tracking (status codes, content length, URLs)
-- Added SendGrid-specific metrics (attachments, recipients)
+- Added OpenTelemetry support for monitoring and tracing
+- Automatic span creation for SendGrid operations
+- HTTP metrics tracking (status codes, content length, URLs)
+- SendGrid metrics (attachments, recipients)
 
-### Enhanced Error Handling
+### Error Handling
 - Improved session management with better error messages
-- Added logging for session state changes
 - Enhanced exception handling with detailed error information
 
 ## 🔧 Improvements
 
 ### Code Quality
-- Added comprehensive type hints throughout the codebase
+- Added comprehensive type hints
 - Improved docstrings and documentation
-- Enhanced test coverage with new unit and integration tests
-- Added proper error handling for session management
+- Enhanced test coverage
+- Better session management
 
 ### Testing
-- Added new test fixtures for telemetry testing
-- Introduced integration tests for telemetry functionality
-- Added unit tests for HTTP metrics and SendGrid metrics
-- Improved test organization and structure
-
-### Documentation
-- Added detailed telemetry integration documentation
-- Updated README with OpenTelemetry setup instructions
-- Added examples for telemetry configuration
-- Improved API documentation
+- Added telemetry test fixtures
+- New integration tests for telemetry
+- Unit tests for metrics
+- Better test organization
 
 ## 🐛 Bug Fixes
 
 - Fixed session management issues
 - Improved error handling for closed sessions
 - Fixed type hints in telemetry decorators
-- Resolved issues with span creation and management
+- Fixed span creation and management
 
 ## 📦 Dependencies
 
-- Added OpenTelemetry dependencies:
-  - opentelemetry-api>=1.20.0
-  - opentelemetry-sdk>=1.20.0
-- Updated test dependencies:
-  - pytest>=7.0.0
-  - pytest-asyncio>=0.21.0
-  - pytest-cov>=4.1.0
+### Added
+- opentelemetry-api>=1.20.0
+- opentelemetry-sdk>=1.20.0
+
+### Updated
+- pytest>=7.0.0
+- pytest-asyncio>=0.21.0
+- pytest-cov>=4.1.0
 
 ## 🔄 Configuration
 
-- Added environment variable support for span naming:
-  - `SENDGRID_SPAN_NAME` (defaults to "sendgrid.send")
-- Improved tracer provider configuration
-- Enhanced span attribute handling
-
+### Environment Variables
+- `SENDGRID_TELEMETRY_IS_ENABLED`: Enable/disable telemetry (default: true)
+- `SENDGRID_TELEMETRY_SPAN_NAME`: Custom span name (default: "sendgrid.send")
 
 ## 📝 Documentation
 
-### New Documentation
-- Added telemetry integration guide
-- Added OpenTelemetry setup instructions
-- Added examples for metrics and tracing
-- Added API reference for telemetry functions
+### Added
+- Telemetry integration guide
+- OpenTelemetry setup instructions
+- Metrics and tracing examples
+- API reference for telemetry
 
-### Updated Documentation
-- Updated README with new features
-- Enhanced API documentation
-- Added more code examples
-- Improved error handling documentation 
+### Updated
+- README with new features
+- API documentation
+- Error handling documentation 
