cleaned the `example.ipynb`

--- a/example.ipynb
+++ b/example.ipynb
@@ -2,33 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'SendgridAPI' from 'async_sendgrid' (/Users/emahjoub/Desktop/Projects/async-sendgrid/.venv/lib/python3.12/site-packages/async_sendgrid/__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01masync_sendgrid\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m SendgridAPI\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msendgrid\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mhelpers\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmail\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Content, Email, Mail, To\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'SendgridAPI' from 'async_sendgrid' (/Users/emahjoub/Desktop/Projects/async-sendgrid/.venv/lib/python3.12/site-packages/async_sendgrid/__init__.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from async_sendgrid import SendgridAPI\n",
     "from sendgrid.helpers.mail import Content, Email, Mail, To\n",
     "import os\n",
     "\n",
-    "API_KEY = os.environ['API_KEY']\n",
-    "sendgrid = SendgridAPI(API_KEY)"
+    "# WARNING: This is an example. In production:\n",
+    "# 1. Never hardcode API keys in your code\n",
+    "# 2. Use environment variables or secure secret management\n",
+    "# 3. Store API keys in .env files (not committed to version control)\n",
+    "# 4. Consider using a secrets manager service\n",
+    "API_KEY = \"SG.123\"\n",
+    "sendgrid = SendgridAPI(API_KEY, endpoint=\"https://api.sendgrid.com/v3/mail/send\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +30,7 @@
     "subject = \"Lorem ipsum dolor sit amet, consectetur adipiscing elit\"\n",
     "content = Content(\"text/plain\", \"Sed varius ligula ac urna vehicula ultrices. Nunc ut dolor sem.\")\n",
     "\n",
-    "mail = Mail(\n",
+    "email = Mail(\n",
     "    from_email=from_email,\n",
     "    to_emails=to_email,\n",
     "    subject=subject,\n",
@@ -47,12 +40,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Status code: 401\n",
+      "Headers: Headers({'server': 'nginx', 'date': 'Sat, 14 Jun 2025 23:44:26 GMT', 'content-type': 'application/json', 'content-length': '116', 'connection': 'keep-alive', 'access-control-allow-origin': 'https://sendgrid.api-docs.io', 'access-control-allow-methods': 'POST', 'access-control-allow-headers': 'Authorization, Content-Type, On-behalf-of, x-sg-elas-acl', 'access-control-max-age': '600', 'x-no-cors-reason': 'https://sendgrid.com/docs/Classroom/Basics/API/cors.html', 'strict-transport-security': 'max-age=31536000; includeSubDomains', 'content-security-policy': \"frame-ancestors 'none'\", 'cache-control': 'no-cache', 'x-content-type-options': 'no-sniff', 'referrer-policy': 'strict-origin-when-cross-origin'})\n",
+      "Body: b'{\"errors\":[{\"message\":\"The provided authorization grant is invalid, expired, or revoked\",\"field\":null,\"help\":null}]}'\n"
+     ]
+    }
+   ],
    "source": [
-    "async with sendgrid as client:\n",
-    "    response = await client.send(mail)"
+    "# We will get a 401 error because we are not using a valid API key\n",
+    "\n",
+    "response = await sendgrid.send(email)\n",
+    "print(\"Status code:\", response.status_code)\n",
+    "print(\"Headers:\", response.headers)\n",
+    "print(\"Body:\", response.content)"
    ]
   }
  ],
@@ -72,7 +79,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.4"
   },
   "orig_nbformat": 4
  },
